@@ -26,9 +26,11 @@
 #include "JSObject.h"
 
 #include "DatePrototype.h"
+#include "JSGlobalObject.h"
 #include "ObjectPrototype.h"
 #include "PropertyNameArray.h"
 #include "error_object.h"
+#include "lookup.h"
 #include "nodes.h"
 #include "operations.h"
 #include <math.h>
